test: testing packages Item + Offer +Criteria only 2 methods in criteria